tests/snapshots/test_runner__tests__compiler__intepret__emptyObject.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
() | print

============
EXIT CODE
============
0

============
STDOUT
============
()

============
STDERR
============
