tests/snapshots/test_runner__tests__compiler__intepret__function1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  square: n * n given n,
  2 | square | print ,
  9 | square | square | print ,
}

============
EXIT CODE
============
0

============
STDOUT
============
4
6561

============
STDERR
============
