tests/snapshots/test_runner__tests__compiler__intepret__function2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  1 (a: (b: a)) 2 | print,
  1 (a: (b: b)) 2 | print,
}

============
EXIT CODE
============
0

============
STDOUT
============
1
2

============
STDERR
============
