tests/snapshots/test_runner__tests__compiler__intepret__function3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  squarePlus: a: b: a * a + (b * b),
  3 squarePlus 4 | print,
}

============
EXIT CODE
============
0

============
STDOUT
============
25

============
STDERR
============
