tests/snapshots/test_runner__tests__compiler__intepret__functionCall1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
print | 3 * 2 + 1

============
EXIT CODE
============
0

============
STDOUT
============
9

============
STDERR
============
