tests/snapshots/test_runner__tests__compiler__intepret__functionCurry1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
(
  add1: 1 | +,
  3 | add1 | print
)

============
EXIT CODE
============
0

============
STDOUT
============
4

============
STDERR
============
