tests/snapshots/test_runner__tests__compiler__intepret__function_call_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
1 + 2 * 3 print #

============
EXIT CODE
============
0

============
STDOUT
============
9

============
STDERR
============
