tests/snapshots/test_runner__tests__compiler__intepret__object1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
{
  x: 1,
  y: x + 2,
} print ()

============
EXIT CODE
============
0

============
STDOUT
============
{x: 1, y: 3}

============
STDERR
============
