tests/snapshots/test_runner__tests__compiler__intepret__objectAccess.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
(a: (b: (c: 123))).a.b.c | print

============
EXIT CODE
============
0

============
STDOUT
============
123

============
STDERR
============
