tests/snapshots/test_runner__tests__compiler__intepret__parenthesized1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
(`hello world`) | print

============
EXIT CODE
============
0

============
STDOUT
============
"hello world"

============
STDERR
============
